<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/calculBTN"
        android:layout_width="161dp"
        android:layout_height="52dp"
        android:text="@string/calculate"
        android:visibility="gone"
        app:icon="@android:drawable/ic_menu_revert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/infosBTN"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:layout_marginEnd="400dp"
        android:text="@string/infos"
        android:visibility="visible"
        app:icon="@android:drawable/ic_dialog_info"
        app:layout_constraintBottom_toTopOf="@+id/calculLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calculLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/calculLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:textAlignment="center"
        android:textDirection="ltr"
        android:visibility="visible"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15pt"
            android:paddingTop="15pt"
            android:paddingEnd="15pt"
            android:paddingBottom="10pt"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_operation"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/operationInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="3pt"
                android:textAlignment="center"
                app:endIconMode="clear_text"
                app:placeholderText="@string/input_place_holder">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5pt"
                android:enabled="true"
                android:text="@string/calculate" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/resultLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10pt"
            android:animateLayoutChanges="true"
            android:animationCache="true"
            android:background="#BDB7B7"
            android:orientation="vertical"
            android:paddingStart="14pt"
            android:paddingTop="5pt"
            android:paddingEnd="14pt"
            android:paddingBottom="7pt"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/result"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/errorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15pt"
            android:paddingTop="10pt"
            android:paddingEnd="15pt"
            android:paddingBottom="10pt"
            android:textAlignment="center"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/invalidOperation"
                android:textAlignment="center"
                android:textColor="#FF0D0D"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/infosLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="10pt"
            android:paddingTop="10pt"
            android:paddingEnd="10pt"
            android:paddingBottom="10pt">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0pt"
                android:text="@string/funcsList"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0pt"
                android:contentDescription="@string/funcsList"
                android:padding="0pt"
                app:srcCompat="@drawable/funcs" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example" />

            <TextView
                android:id="@+id/link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6pt"
                android:text="@string/github"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>